Grease Pencil in Movie Clip Editor can not be erased in Track > Cursor mode. #42278

Closed
opened 2014-10-17 17:43:41 +02:00 by Iván Barták · 5 comments

Blender Version
Broken: 2.71 or before

Short description of error
The Grease Pencil in Movie Clip Editor can not be erased with D + Right Click in Track with Cursor mode.
Track with View mode works just fine.

Exact steps for others to reproduce the error

  1. Switch to Motion Tracking view
  2. Open a movie clip
  3. Create a tracker
  4. Switch Grease pencil to Track mode
  5. Draw something
  6. Try to erease with D + Right Click
**Blender Version** Broken: 2.71 or before **Short description of error** The Grease Pencil in Movie Clip Editor can not be erased with D + Right Click in Track with Cursor mode. Track with View mode works just fine. **Exact steps for others to reproduce the error** 1. Switch to Motion Tracking view 2. Open a movie clip 3. Create a tracker 4. Switch Grease pencil to Track mode 5. Draw something 6. Try to erease with D + Right Click
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Montaire

Added subscriber: @Montaire
Sergey Sharybin was assigned by Bastien Montagne 2014-10-18 11:55:32 +02:00

This issue was referenced by b770964558

This issue was referenced by b770964558c49d6cbdd766956d9dde4100dcc75f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b770964558.

Closed by commit b770964558.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42278
No description provided.