Fix T42278: Grease Pencil in Movie Clip Editor can not be erased in Track > Cursor mode

Eraser was not aware of possible transform matrix for the strokes.